apps/staging/chat-copilot/deployment.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: chat-copilot-webapp
    name: chat-copilot-webapp
spec:
    selector:
        matchLabels:
            app: chat-copilot-webapp
    replicas: 1
    template:
        metadata:
            labels:
                app: chat-copilot-webapp
        spec:
            containers:
                - image: ghcr.io/huangyingting/chat-copilot-webapp-nginx:main
                  imagePullPolicy: Always
                  name: chat-copilot-webapp
                  ports:
                    - containerPort: 3000
                      name: http
                      protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-16T07:05:47Z"
    mac: ENC[AES256_GCM,data:QyV66VN2m1imjmlYjc0pKAb673YG5QCtPJ/u+CdVDuIEyIQpjv6FNgJDW+mnLmb6cAJPg7NrojR2nkTMvd5helAyCu1Ty6YG04fC2IhLwjYpTjJhrtj978EumiPmEaXOBwqegz92M8ddTP4wAfH1iJDugZkIimJiergA+0pm0ns=,iv:61CDWls1KxTOZHwFl838SqiBsuuWPc9hkv3Q84Cfj7o=,tag:dE4aStQ9uNuwBYkTQ9mBNw==,type:str]
    pgp:
        - created_at: "2023-10-16T07:05:45Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//VMCo+RSOiBdJvHmSCYtHLxlmRNK/3yhj2W6X2QeO/uMz
[...]
            =JX9D
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts)$
    version: 3.7.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: chat-copilot-webapi
    name: chat-copilot-webapi
spec:
    selector:
        matchLabels:
            app: chat-copilot-webapi
    replicas: 1
    template:
        metadata:
            labels:
                app: chat-copilot-webapi
        spec:
            containers:
                - image: ghcr.io/huangyingting/chat-copilot-webapi:main
                  imagePullPolicy: Always
                  name: chat-copilot-webapi
                  ports:
                    - containerPort: 8080
                      name: http
                      protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-16T07:05:47Z"
    mac: ENC[AES256_GCM,data:QyV66VN2m1imjmlYjc0pKAb673YG5QCtPJ/u+CdVDuIEyIQpjv6FNgJDW+mnLmb6cAJPg7NrojR2nkTMvd5helAyCu1Ty6YG04fC2IhLwjYpTjJhrtj978EumiPmEaXOBwqegz92M8ddTP4wAfH1iJDugZkIimJiergA+0pm0ns=,iv:61CDWls1KxTOZHwFl838SqiBsuuWPc9hkv3Q84Cfj7o=,tag:dE4aStQ9uNuwBYkTQ9mBNw==,type:str]
    pgp:
        - created_at: "2023-10-16T07:05:45Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//VMCo+RSOiBdJvHmSCYtHLxlmRNK/3yhj2W6X2QeO/uMz
[...]
            =JX9D
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts)$
    version: 3.7.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: chat-copilot-web-searcher
    name: chat-copilot-web-searcher
spec:
    selector:
        matchLabels:
            app: chat-copilot-web-searcher
    replicas: 1
    template:
        metadata:
            labels:
                app: chat-copilot-web-searcher
        spec:
            containers:
                - image: ghcr.io/huangyingting/chat-copilot-web-searcher:main
                  imagePullPolicy: Always
                  name: chat-copilot-web-searcher
                  ports:
                    - containerPort: 80
                      name: http
                      protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-16T07:05:47Z"
    mac: ENC[AES256_GCM,data:QyV66VN2m1imjmlYjc0pKAb673YG5QCtPJ/u+CdVDuIEyIQpjv6FNgJDW+mnLmb6cAJPg7NrojR2nkTMvd5helAyCu1Ty6YG04fC2IhLwjYpTjJhrtj978EumiPmEaXOBwqegz92M8ddTP4wAfH1iJDugZkIimJiergA+0pm0ns=,iv:61CDWls1KxTOZHwFl838SqiBsuuWPc9hkv3Q84Cfj7o=,tag:dE4aStQ9uNuwBYkTQ9mBNw==,type:str]
    pgp:
        - created_at: "2023-10-16T07:05:45Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//VMCo+RSOiBdJvHmSCYtHLxlmRNK/3yhj2W6X2QeO/uMz
[...]
            =JX9D
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts)$
    version: 3.7.3
