apps/staging/chat-copilot/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
    name: chat-copilot-webapp
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:xX5uCt440iKPqhJJPc9Zo4HnEvzEc8kGltPkkq9RYGQutb8=,iv:Qbx4Fk8ZHW7MS5SfUfRlbs3E8OVcy6cDnMc8gtoiOdk=,tag:w+EzUods/9OLXcib8rNeGg==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: chat-copilot-webapp
                        port:
                            number: 80
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:LYJP6R6+ywOaYjMLn/tWmR7ae989VS4eJNXsS5Ioew8GaZ8=,iv:z4PJfhJQ0n7AXsz96G++n1y0OMXaq0Ibrais/8b3LfA=,tag:GEIdIhG/+45lhpBSD/Xl1w==,type:str]
          secretName: chat-copilot-webapp-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-08-17T03:11:57Z"
    mac: ENC[AES256_GCM,data:cxnCik9UMrL+c4C4XDet4GuTHk4nIeMGh0g/Cdmi4N1vT1eTO2mwnkpPQgI9hczHNZW2w9bH9A6I99zesVwR9U1KdG6fnvVV54lYGwfUVoegS7msrroMq582kkZRU/d7Z2Im9UnfwjKXWhzzw05v8VzuzdXVfL+dPOaPC5nsy20=,iv:DXBwJhhPXvk0M/fMtnKek40gV7KvZaGUPuBmTJ2vYNA=,tag:ZI5smnCGxCQfzEXz05rLEQ==,type:str]
    pgp:
        - created_at: "2023-08-17T03:11:53Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ/8CycxTe/YXkSV4qnlJxWN/HH5GZnm8njcae6v7VMDSKBs
[...]
            =XpM6
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
    name: chat-copilot-webapi
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:qurLtIJjljs/NXPQ83vkraexs8e7dWoH2G9BtjMn3z51ahY=,iv:aBvJEDGG2e1VwKEUyhFsHDp8bB5EwrDnDWC1AxnqVOQ=,tag:tU93VomqjD8/NuvwV77Nnw==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: chat-copilot-webapi
                        port:
                            number: 80
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:eXfsA/Yi+PyrByLmiUGlmFHa3myf7l/zhKptD6VDmWlASBg=,iv:vMZyJs+IObMnEsCgGcH1LUyBYdwgeKLZtBu67rDNLzY=,tag:Oninu8QbqxG9g4bCaUEw+w==,type:str]
          secretName: chat-copilot-webapi-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-08-17T03:11:57Z"
    mac: ENC[AES256_GCM,data:cxnCik9UMrL+c4C4XDet4GuTHk4nIeMGh0g/Cdmi4N1vT1eTO2mwnkpPQgI9hczHNZW2w9bH9A6I99zesVwR9U1KdG6fnvVV54lYGwfUVoegS7msrroMq582kkZRU/d7Z2Im9UnfwjKXWhzzw05v8VzuzdXVfL+dPOaPC5nsy20=,iv:DXBwJhhPXvk0M/fMtnKek40gV7KvZaGUPuBmTJ2vYNA=,tag:ZI5smnCGxCQfzEXz05rLEQ==,type:str]
    pgp:
        - created_at: "2023-08-17T03:11:53Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ/8CycxTe/YXkSV4qnlJxWN/HH5GZnm8njcae6v7VMDSKBs
[...]
            =XpM6
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts)$
    version: 3.7.3
